# python-template-project

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  dev-requirements.txt  pyproject.toml
.github/workflows/: ci.yml
