[tool.poetry]
name = "template-project"
version = "0.1.0"
description = "Python template project with linter, formatter and pre-commit"
authors = ["John Doe <johndoe@provider.com"]
readme = "README.md"
packages = [{include = "template_project", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.11.4"
pre-commit = "^2.21.0"
black = "^22.12.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
target-version = ['py311']
line-length = 100
preview = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
