[tool.poetry]
name = "template-project"
version = "0.1.0"
description = "Python template project with linter, formatter and pre-commit"
authors = ["John Doe <johndoe@provider.com>"]
readme = "README.md"
packages = [{include = "template_project", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.7,<3.8"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
target-version = ['py37']
line-length = 100
preview = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
