[tool.poetry]
name = "template-project"
version = "0.1.0"
description = "Python template project with linter, formatter and pre-commit"
authors = ["John Doe <johndoe@provider.com>"]
readme = "README.md"
packages = [{include = "template_project", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"

[tool.poetry.group.dev.dependencies]
flake8 = { version = "*", python = ">=3.10,<3.11" }
isort = { version = "*", python = ">=3.10,<3.11" }
pre-commit = { version = "*", python = ">=3.10,<3.11" }
black = { version = "*", python = ">=3.10,<3.11" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
target-version = ['py10']
line-length = 100
preview = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
